@@ -3,7 +3,7 @@
 
 # Base of the exult source
 SRC=.
-VPATH=$(SRC):$(SRC)/files:$(SRC)/pathfinder:$(SRC)/flic:$(SRC)/conf:$(SRC)/audio:$(SRC)/audio/midi_drivers:$(SRC)/imagewin:$(SRC)/usecode
+VPATH=$(SRC):$(SRC)/files:$(SRC)/gumps:$(SRC)/pathfinder:$(SRC)/flic:$(SRC)/conf:$(SRC)/audio:$(SRC)/audio/midi_drivers:$(SRC)/imagewin:$(SRC)/usecode
 VERSION=0.90alpha1
 
 ### Modify these paths
@@ -12,7 +12,7 @@ SDL_LIBS=-L/boot/develop/tools/gnupro/lib -lSDLmain -lSDL
 
 CPPFLAGS=-DVERSION=\"$(VERSION)\" -DBEOS -DDEBUG -DEXULT_DATADIR=\"data\" \
 	-DNO_INTRO -DAUTOCONFIGURED -I$(SRC)/imagewin -I$(SRC)/files \
-	-I$(SRC) -I$(SRC)/audio -I$(SRC)/conf -I$(SRC)/pathfinder \
+	-I$(SRC) -I$(SRC)/audio -I$(SRC)/conf -I$(SRC)/gumps -I$(SRC)/pathfinder \
 	$(SDL_INCLUDES)
 CXXFLAGS=-O2 -Wall
 
@@ -37,10 +37,14 @@ AUDIO_OBJS=Audio.o Midi.o Mixer.o SDL_mapping.o pcb.o xmidi.o $(MIDI_DRV_OBJS)
 # unused: test.o u7audiotool.o
 FLIC_OBJS=playfli.o
 FILE_OBJS=U7file.o Flex.o IFF.o Table.o Flat.o utils.o
+GUMPS_OBJS= Actor_gump.o  Book_gump.o  File_gump.o  Gump.o  Gump_button.o \
+	gump_utils.o  Gump_widget.o  misc_buttons.o  Paperdoll_gump.o  \
+	Scroll_gump.o Sign_gump.o  Slider_gump.o  Spellbook_gump.o  Stats_gump.o  \
+	Text_gump.o  Yesno_gump.o
 IMAGEWIN_OBJS=imagebuf.o imagewin.o iwin8.o ibuf8.o ibuf16.o imagescl.o
 # unused: test.o
 USECODE_OBJS=ucmachine.o ucsched.o intrinsics.o useval.o
-OBJS=$(MAIN_OBJS) $(PATH_OBJS) $(CONF_OBJS) $(AUDIO_OBJS) $(FLIC_OBJS) $(FILE_OBJS) $(IMAGEWIN_OBJS) $(USECODE_OBJS)
+OBJS=$(MAIN_OBJS) $(PATH_OBJS) $(CONF_OBJS) $(AUDIO_OBJS) $(FLIC_OBJS) $(FILE_OBJS) $(GUMPS_OBJS) $(IMAGEWIN_OBJS) $(USECODE_OBJS)
 
 EXULT_FLX_OBJECTS = \
 	data/exult_quotes.shp \
