@@ -4,7 +4,7 @@
 
 # Base of the exult source (I'm building in a subdir called 'debug')
 SRC=.
-VPATH=$(SRC):$(SRC)/files:$(SRC)/pathfinder:$(SRC)/flic:$(SRC)/conf:$(SRC)/audio:$(SRC)/audio/midi_drivers:$(SRC)/imagewin
+VPATH=$(SRC):$(SRC)/files:$(SRC)/gumps:$(SRC)/pathfinder:$(SRC)/flic:$(SRC)/conf:$(SRC)/audio:$(SRC)/audio/midi_drivers:$(SRC)/imagewin
 
 ### Modify these paths
 SDL_INCLUDES=-I$(SRC)/sdl/include
@@ -12,7 +12,7 @@ SDL_LIBS=-L$(SRC)/sdl/lib -lSDLmain -lSDL
 
 # NOTE: make's builtin implicit rules are used for .cc => .o
 # mingw32 automatically defines WIN32
-CPPFLAGS=-DVERSION=\\\"0.90alpha1\\\" -DEXULT_DATADIR=\\\"data\\\" -g3 -DDEBUG -DAUTOCONFIGURED -DNO_INTRO -I$(SRC)/imagewin -I$(SRC)/files \
+CPPFLAGS=-DVERSION=\\\"0.90alpha1\\\" -DEXULT_DATADIR=\\\"data\\\" -g3 -DDEBUG -DAUTOCONFIGURED -DNO_INTRO -I$(SRC)/imagewin -I$(SRC)/files -I$(SRC)/gumps \
 	-I$(SRC) -I$(SRC)/audio -I$(SRC)/conf -I$(SRC)/pathfinder \
 	$(SDL_INCLUDES)
 
@@ -40,10 +40,14 @@ AUDIO_OBJS=Audio.o Midi.o Mixer.o SDL_mapping.o pcb.o xmidi.o $(MIDI_DRV_OBJS)
 # unused: test.o u7audiotool.o
 FLIC_OBJS=playfli.o
 FILE_OBJS=U7file.o Flex.o IFF.o Table.o Flat.o utils.o
+GUMPS_OBJS= Actor_gump.o  Book_gump.o  File_gump.o  Gump.o  Gump_button.o \
+	gump_utils.o  Gump_widget.o  misc_buttons.o  Paperdoll_gump.o  \
+	Scroll_gump.o Sign_gump.o  Slider_gump.o  Spellbook_gump.o  Stats_gump.o  \
+	Text_gump.o  Yesno_gump.o
 IMAGEWIN_OBJS=imagebuf.o imagewin.o iwin8.o ibuf8.o ibuf16.o imagescl.o
 # unused: test.o
 USECODE_OBJS=ucmachine.o ucsched.o intrinsics.o useval.o
-OBJS=$(MAIN_OBJS) $(PATH_OBJS) $(CONF_OBJS) $(AUDIO_OBJS) $(FLIC_OBJS) $(FILE_OBJS) $(IMAGEWIN_OBJS) $(USECODE_OBJS)
+OBJS=$(MAIN_OBJS) $(PATH_OBJS) $(CONF_OBJS) $(AUDIO_OBJS) $(FLIC_OBJS) $(FILE_OBJS) $(GUMPS_OBJS) $(IMAGEWIN_OBJS) $(USECODE_OBJS)
 
 EXULT_FLX_OBJECTS = \
 	data/exult_quotes.shp \
